# openposterdb

./: README.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
api/: .env.example  Cargo.toml
api/src/: config.rs  error.rs  lib.rs  main.rs
api/src/cache/: mod.rs
api/src/entity/: api_key_settings.rs
api/src/handlers/: admin.rs  api_keys.rs  auth.rs  image.rs  middleware.rs  preview.rs
api/src/id/: mod.rs
api/src/image/: badge.rs  generate.rs  icons.rs  serve.rs
api/src/routes/: admin.rs  api_keys.rs  app.rs  image.rs
api/src/services/: db.rs  fanart.rs  mdblist.rs  mod.rs  ratings.rs  retry.rs  tmdb.rs  trakt.rs
api/src/upgrade/: mod.rs  v003_badge_shape_background_cache.rs
api/tests/: admin.rs  api_key_self.rs  api_keys.rs  cdn_redirects.rs  db_operations.rs  e2e_settings.rs  free_api_key.rs  image_size.rs  preview.rs  query_overrides.rs  upgrade.rs
api/tests/common/: mod.rs
docs/: README.md  api.md  architecture.md  configuration.md  deployment.md  development.md  media-servers.md
scripts/: README.md  dev-worktree.sh  fetch-flags.sh  fetch-quality-logos.sh  release.sh
web/: eslint.config.ts  package-lock.json  package.json  tsconfig.vitest.json
web/e2e/: free-api-key.spec.ts  key-settings.spec.ts  settings.spec.ts
web/src/__tests__/components/: ClearCacheButton.spec.ts  FreeApiKeyCard.display.spec.ts  FreeApiKeyCard.spec.ts  (+3 more)
web/src/components/: AppSidebar.vue  ClearCacheButton.vue  FreeApiKeyCard.vue  ImageListView.vue  RatingsOrderList.vue  RenderSettingsForm.vue
web/src/layouts/: DashboardLayout.vue
web/src/lib/: api.ts  auth-api.ts  constants.ts  utils.ts
web/src/router/: index.ts
web/src/stores/: auth.ts
web/src/views/: BackdropsView.vue  DashboardView.vue  DocsView.vue  EpisodesView.vue  KeySettingsView.vue  LandingView.vue  LoginView.vue  LogosView.vue  PostersView.vue  SeasonsView.vue  SettingsView.vue
(+16 files in other folders)
