[package]
name = "openposterdb-api"
version = "1.1.1"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "fs", "signal", "parking_lot"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "query"] }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "webp"] }
imageproc = { version = "0.26.1", default-features = false, features = ["text"] }
ab_glyph = "0.2.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "2.0.18"
tower-http = { version = "0.6.8", features = ["trace", "cors", "compression-gzip", "fs", "set-header"] }
dashmap = "6.1.0"
moka = { version = "0.12.14", features = ["future", "sync"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.19", default-features = false, features = ["runtime-tokio", "sqlx-sqlite", "macros", "with-chrono", "with-json"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "chrono"] }
bytes = "1"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["hmac", "aws_lc_rs"] }
argon2 = "0.5.3"
sha2 = "0.10.9"
rand = "0.9.2"
chrono = "0.4.44"
zeroize = { version = "1.8.2", features = ["derive"] }
tower = { version = "0.5.3", features = ["util"] }
tower_governor = { version = "0.8.0", default-features = false, features = ["axum"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }

[features]
test-support = []

[dev-dependencies]
openposterdb-api = { path = ".", features = ["test-support"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
base64 = "0.22.1"
serial_test = "3"
tempfile = "3.27.0"
